# Aethon

./: Cargo.toml  Makefile.toml  README.md
src/: instance.rs  main.rs  paths.rs
src/screens/: error.rs  folder_warn.rs  instance_warn.rs  main.rs  mod.rs  setup.rs  startup.rs
src/widget/: click_hover_area.rs  instance.rs  instance_card.rs  mod.rs  mouse_area.rs
