[package]
name = "aethon"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0"
serde_json = "1.0"
iced = { version = "0.10", features = ["tokio", "lazy", "advanced", "debug"] }
tokio = { version = "1.33", features = ["fs"] }
tokio-stream = { version = "0.1", features = ["fs"] }
rfd = "0.12"
sysinfo = "0.29"
single-instance = "0.3"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.4"
